# ifc-to-cityjson

./: CMakeLists.txt  context.h  geobim.cpp  geobim.h  global_execution_context.cpp  global_execution_context.h  opening_collector.h  processing.cpp  processing.h  radius_execution_context.cpp  radius_execution_context.h  settings.cpp  settings.h  timer.h  writer.h
